--- a/package.json
+++ b/package.json
@@ -1,13 +1,25 @@
 {
-    "name": "vite-tailwind-scss-boilerplate",
+    "name": "avidbrewing",
     "private": true,
-    "version": "0.0.0",
+    "version": "1.0.0",
     "scripts": {
         "dev": "vite",
         "build": "vite build",
         "preview": "vite preview"
     },
     "devDependencies": {
+        "@melloware/coloris": "^0.21.0",
+        "@tailwindcss/aspect-ratio": "^0.4.2",
+        "@tailwindcss/forms": "^0.5.2",
+        "@tailwindcss/line-clamp": "^0.4.4",
+        "@tailwindcss/typography": "^0.5.9",
+        "alpinejs": "^3.12.3",
+        "axios": "^1.1.2",
+        "glightbox": "^3.2.0",
+        "sass-loader": "^12.1.0",
+        "sortablejs": "^1.15.0",
+        "swiper": "^10.1.0",
+        "tinymce": "^6.8.1",
         "autoprefixer": "^10.4.14",
         "postcss": "^8.4.27",
         "postcss-import": "^15.1.0",
@@ -15,9 +27,11 @@
         "prettier-plugin-tailwindcss": "^0.5.2",
         "sass": "^1.65.1",
         "tailwindcss": "^3.3.3",
-        "vite": "^4.4.9"
+        "vite": "^6.0"
     },
     "dependencies": {
-        "alpinejs": "^3.12.3"
+        "@alpinejs/intersect": "^3.13.3",
+        "@googlemaps/js-api-loader": "^1.16.2",
+        "cropperjs": "^1.6.0"
     }
 }
